# docling-parser

./: .gitignore  LICENSE  Makefile  Makefile.ps1  README.md  advanced_parsing.py  commitlint.config.js  parse_document.py  pyproject.toml  run_parser.bat  run_parser.ps1  run_parser.sh  start_api.py  verify_setup.py
.github/: PULL_REQUEST_TEMPLATE.md  commit_message_template.txt  setup_commit_hooks.ps1  setup_commit_hooks.sh
.github/workflows/: commitlint.yml
api/: README.md  example_client.py  main.py  main_simple.py
docs/: contributing.md  index.md  usage.md
docs/sample_documents/: README.md
tests/: test_document_parsing.py
