[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docling-parser"
version = "0.1.0"
description = "Document parsing project using Docling library"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dependencies = [
    "docling",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-magic-bin;platform_system=='Windows'",
    "python-magic;platform_system!='Windows'",
]

[tool.setuptools]
py-modules = ["parse_document", "advanced_parsing", "verify_setup"]

[project.scripts]
parse-doc = "parse_document:main"
verify-docling-setup = "verify_setup:main"
docling-api = "start_api:main"

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
]